2010-07-21  Noel O'Boyle

	* src/CMakeLists.txt: Only compile ops/conformer.cpp and 
	src/conformersearch.cpp if Eigen2 is found

2010-07-19 Chris Morley

	* src/formats/inchiformat.cpp: make suitable for InChI 1.03.
	Allow InChI options and re-enable -M and -F options for non-
	standard InChI.
	
	* include/openbabel/inchiformat.h: improve Description()
	
	* windows-vc2008/libs/i386/libinchi.dll, libinchi.lib: add
	* windows-vc2008/libs/i386/libstdinchi.dll, libstdinchi.lib: remove
	
	* windows-vc2008/default_build.bat: change from libstdinchi.lib
	 to libinchi

	* src/GUI/OBGUI.cpp,src/GUI/OBGUI.h: add menu item to shrink
	window to minimum useful size.

2010-07-19 Chris Morley

	* include/openbabel/plugin.h: reverted the last change. Something
	seems to have gone wrong with the deobfuscation of the	MAKE_PLUGIN
	macro and was causing a crash in the GUI when formats were changed.
	I did not find out the precise cause, but it seemed to be around the
	default op. The difficulty of debugging	this illustrates that using a
	macro here is is not nice; we could do with a more C++ way of making
	a plugin. Tim has suggested a possible approach
	http://openbabel.org/wiki/Plugins
	
	There is already an annotated version of the contents of the macro
	at the end of the op.h, but it might not be up to date. 
	
2010-07-16 Konstantin Tokarev
	* New INSTALL file

	* include/openbabel/plugin.h: Deobfuscated MAKE_PLUGIN macro

	* src/formats/xml/cmlformat.cpp: Save and load bond labels in 
	CML format

2010-07-13 Chris Morley

	Alternative method for read-conformers which maintains
	code segregation (no chemistry in OBConversion)
	
	* src/ops/readconformers.cpp: new OBOp to combine multiple conformers
	into a single molecule.
	
	* src/obconversion.cpp,src/transform.cpp:comment out read-conformers
	code; minor doc mods
	
	* src/obmolecformat.cpp: Change option name from "write-conformers"
	to "writeconformers". The - was causing parsing problems in the GUI.
	