@@ -21,10 +21,12 @@ GNU General Public License for more details.
 
 /* ---- OpenBabel include ---- */
 #include <openbabel/obmolecformat.h>
+#include <openbabel/math/vector3.h>
 
 /* ---- C++ includes ---- */
 #include <string>
 #include <sstream>
+#include <cctype>
 
 /* ---- Max. length of a atom-label ---- */
 #define StrLen 32
@@ -60,6 +62,31 @@ GNU General Public License for more details.
 /* ---- Convert RAD to DEG ---- */
 #define RAD2DEG(r) (((double) 180.0 * r) / PI)
 
+//! \return the geometric centroid to an array of coordinates in double* format
+// Note: Based on center_coords from obutil.cpp. This function is declared in matrix3x3.h but there is no function
+//       definition there.
+OpenBabel::vector3 my_center_coords(double *c, unsigned int size)
+{
+  if (size == 0)
+    {
+      return(OpenBabel::VZero);
+    }
+	unsigned int i; 
+  double x=0.0, y=0.0, z=0.0;
+  for (i = 0;i < size;++i)
+    {
+      x += c[i*3];
+      y += c[i*3+1];
+      z += c[i*3+2];
+    }
+  x /= (double) size;
+  y /= (double) size;
+  z /= (double) size;
+  OpenBabel::vector3 v(x,y,z);
+  return(v);
+}
+
+
 using namespace std;
 namespace OpenBabel
 {
@@ -76,8 +103,17 @@ namespace OpenBabel
     virtual const char* Description() //required
     {
       return
-        "POV-Ray input format\n"
-        "No comments yet\n";
+      "POV-Ray input format\n"
+      "Generate an input file for the open source POV-Ray ray tracer.\n"
+      "Write Options e.g. -xt\n"
+      " c Add a black and white checkerboard\n"
+      " f Add a mirror sphere\n"
+      " m <model-type> ``BAS`` (ball-and-stick), ``SPF`` (space-fill) or ``CST`` (capped sticks) \n"
+      "    The default option is ball-and-stick. To choose space-fill, you would use the following command line::\n\n"
+      "      obabel aspirin.mol -O aspirin.pov -xm SPF\n\n"
+      " s Add a sky (with clouds)\n"
+      " t Use transparent textures\n"
+      ;
     };
 
     virtual const char* SpecificationURL()
@@ -94,63 +130,17 @@ namespace OpenBabel
     /// The "API" interface functions
     virtual bool WriteMolecule(OBBase* pOb, OBConversion* pConv);
 
+  private:
+    string model_type;
+    bool sky, sphere, trans_texture, checkerboard;
+    void OutputHeader(ostream &ofs, OBMol &mol, string prefix);
+
   };
 
   //Make an instance of the format class
   PovrayFormat thePovrayFormat;
 
-  /* ---- Make a prefix from title of molecule ---- */
-  string MakePrefix(const char* title)
-  {
-    int pos; /* Position in prefix */
-    char *titleCpy = (char*) NULL;
-    char *str = (char*) NULL;
-    char *last = (char*) NULL;
-
-    /* ---- Copy molecule title to 'str' ---- */
-    if ((titleCpy = strdup(title)) == (char *) NULL)
-      return string("NoMemory");
-
-    /* --- Find last '/' and set 'str' to it if needed ----- */
-    last = strrchr(titleCpy, '/');
-    if (last != (char *) NULL)
-      str = (last + 1);
-    else
-      str = titleCpy;
-
-    /* ---- Check for nonempty string ---- */
-    if (strlen(str) == 0)
-      return string("InValid");
-
-    /* ---- Look for first . and replace with \0 ----- */
-    pos = 0;
-    while((str[pos] != '\0') && (str[pos] != '.'))
-      {
-
-        /* ---- Remove all tabs and spaces ---- */
-        if ((str[pos] == ' ') || (str[pos] == '\t'))
-          str[pos] = '_';
-
-        /* ---- Check next position ---- */
-        pos++;
-
-      }
-
-    /* ---- If we have found a '.' cut the string there ---- */
-    str[pos] = '\0';
-
-    /* ---- Cast to C++ string-type the above operations are a mess with C++ strings ---- */
-    string prefix(str);
-
-    /* ---- Free allocated memory ---- */
-    free(titleCpy);
-
-    /* ---- Return the prefix ---- */
-    return prefix;
-
-  }
-
-  void OutputHeader(ostream &ofs, OBMol &mol, string prefix)
+  void PovrayFormat::OutputHeader(ostream &ofs, OBMol &mol, string prefix)
   {
     time_t akttime;                              /* Systemtime                        */
     char timestr[TIME_STR_SIZE + 1] = "";        /* Timestring                        */
@@ -165,15 +155,98 @@ namespace OpenBabel
                         );
 
     /* ---- Write some header information ---- */
-    ofs << "//Povray V3.1 code generated by Open Babel" << endl;
+    ofs << "//Povray v3 code generated by Open Babel" << endl;
     ofs << "//Author: Steffen Reith <streit@streit.cc>" << endl;
+    ofs << "//Update (2010): Noel O'Boyle and Steven Wathen" << endl;
 
     /* ---- Include timestamp in header ---- */
     ofs << "//Date: " << timestr << endl << endl;
 
+    /* ---- Set configurable global settings ---- */
+    ofs << "//Set some global parameters for display options" << endl;
+    ofs << "#declare " << model_type << " = true;" << endl;
+    string trans_tex_setting = trans_texture ? "true" : "false";
+    ofs << "#declare TRANS = " << trans_tex_setting << ";" << endl << endl;
+
+    /* ---- Background, camera and light source ---- */
+    OpenBabel::vector3 centroid = my_center_coords(mol.GetCoordinates(), mol.NumAtoms());
+
+    ofs << "#include \"colors.inc\"\n" << endl;
+
+    ofs <<  "// create a regular point light source\n"
+            "light_source {\n"
+            "  <" << centroid.x()  + 2.0 << "," << centroid.y() + 3.0 << "," << centroid.z() - 8.0 << ">\n" 
+            "  color rgb <1,1,1>    // light's color\n"
+            "}\n" << endl;
+
+    if (sky) {
+      ofs << "// Add some nice sky with clouds\n"
+"sky_sphere {\n"
+"    pigment {\n"
+"      gradient y\n"
+"      color_map {\n"
+"        [0.0 1.0 color SkyBlue  color NavyBlue]\n"
+"      }\n"
+"      scale 2\n"
+"      translate -1\n"
+"    }\n"
+"    pigment {\n"
+"      bozo\n"
+"      turbulence 0.65\n"
+"      octaves 6\n"
+"      omega 0.7\n"
+"      lambda 2\n"
+"      color_map {\n"
+"          [0.0 0.1 color rgb <0.85, 0.85, 0.85>\n"
+"                   color rgb <0.75, 0.75, 0.75>]\n"
+"          [0.1 0.5 color rgb <0.75, 0.75, 0.75>\n"
+"                   color rgbt <1, 1, 1, 1>]\n"
+"          [0.5 1.0 color rgbt <1, 1, 1, 1>\n"
+"                   color rgbt <1, 1, 1, 1>]\n"
+"      }\n"
+"      scale <0.2, 0.5, 0.2>\n"
+"    }\n"
+"    rotate -135*x\n"
+"  }\n" << endl;
+    }
+    else { // Simple background
+      ofs << "// set a color of the background (sky)" << endl;
+      ofs << "background { color rgb <0.95 0.95 0.95> }\n" << endl;
+    }
+
+    ofs <<  "// perspective (default) camera\n"
+            "camera {\n"
+            "  location  <" << centroid.x() << "," << centroid.y() << "," << centroid.z() - 10.0 << ">\n"
+            "  look_at   <" << centroid.x() << "," << centroid.y() << "," << centroid.z() << ">\n"
+            "  right     x*image_width/image_height\n"
+            "}\n" << endl;
+
+    /* ---- Checkerboard and mirror sphere ---- */
+    if (sphere) {
+      ofs << 
+"// a mirror sphere\n"
+"sphere\n"
+"{ <" << centroid.x()  + 8.0 << "," << centroid.y() - 4 << "," << centroid.z() + 8.0 << ">,4\n"
+"  pigment { rgb <0,0,0> } // A perfect mirror with no color\n"
+"  finish { reflection 1 } // It reflects all\n"
+"}\n" << endl;
+    }
+    if (checkerboard) {
+      ofs << 
+"// simple Black on White checkerboard... it's a classic\n"
+"plane {\n"
+" -y, " << -(centroid.y()-8) << "\n"
+" pigment {\n"
+"  checker color Black color White\n"
+"  scale 2\n"
+" }\n"
+"}\n" << endl;
+    }
+
+
     /* ---- Include header statement for babel ---- */
     ofs << "//Include header for povray" << endl;
-    ofs << "#include \"babel31.inc\"" << endl << endl;
+    ofs << "#include \"babel_povray3.inc\"" << endl << endl;
 
     /* ---- You should do a spacefill model for molecules without bonds ---- */
     if (mol.NumBonds() == 0)
@@ -188,8 +261,8 @@ namespace OpenBabel
       }
 
     /* ---- Set version ---- */
-    ofs << "//Use PovRay3.1" << endl;
-    ofs << "#version 3.1;" << endl << endl;
+    ofs << "//Use PovRay3.6" << endl;
+    ofs << "#version 3.6;" << endl << endl;
 
     /* ---- Print of name of molecule (#\b depends on size of babel.inc!) ---- */
     ofs << "//Print name of molecule while rendering" << endl;
@@ -379,6 +452,8 @@ namespace OpenBabel
 
   void OutputCSTBonds(ostream &ofs, OBMol &mol, string prefix)
   {
+    string bond_type;
+
     /* ---- Write povray-description of all bonds---- */
     for(unsigned int i = 0; i < mol.NumBonds(); ++i)
       {
@@ -421,8 +496,10 @@ namespace OpenBabel
         ofs << "\t   object {" << endl << "\t    bond_" << bond -> GetBondOrder()  << "\n";
 
         /* ---- Add a pigment - statement for start-atom of bond ---- */
+        bond_type = bond->GetBeginAtom() -> GetType();
+        bond_type.erase(remove_if(bond_type.begin(), bond_type.end(), bind1st(equal_to<char>(), '.')));
         ofs << "\t    pigment{color Color_"
-            << bond -> GetBeginAtom() -> GetType()
+            << bond_type
             << "}" << endl;
 
         /* ---- Scale bond if needed ---- */
@@ -480,8 +557,11 @@ namespace OpenBabel
         ofs << "\t   object {" << endl << "\t    bond_" << bond -> GetBondOrder() << endl;
 
         /* ---- Add a pigment - statement for end-atom of bond i ---- */
+        bond_type = bond->GetEndAtom() -> GetType();
+        bond_type.erase(remove_if(bond_type.begin(), bond_type.end(), bind1st(equal_to<char>(), '.')));
+
         ofs << "\t    pigment{color Color_"
-            << bond -> GetEndAtom() -> GetType()
+            << bond_type
             << "}" << endl;
 
         /* ---- Scale bond if needed ---- */
@@ -665,7 +745,7 @@ namespace OpenBabel
     ofs << "#declare " << prefix << "_center = <"
         << (double) -1.0 * (min_x + max_x) / (double) 2.0 << ","
         << (double) -1.0 * (min_y + max_y) / (double) 2.0 << ","
-        << (double) -1.0 * (min_z + max_z) / (double) 2.0 << ">" << endl << endl;
+        << (double) -1.0 * (min_z + max_z) / (double) 2.0 << ">;" << endl << endl;
   }
 
   ////////////////////////////////////////////////////////////////
@@ -675,6 +755,24 @@ namespace OpenBabel
     OBMol* pmol = dynamic_cast<OBMol*>(pOb);
     if(pmol==NULL)
       return false;
+    
+    // Model-type should be one of "bas", "spf" or "cas"
+    model_type = "BAS"; // Default is ball-and-stick
+    const char* tmp = pConv->IsOption("m");
+    if (tmp) {
+      model_type = string(tmp);
+      std::transform(model_type.begin(), model_type.end(), model_type.begin(), std::toupper);
+      if (model_type != "BAS" && model_type != "SPF" && model_type != "CST") {
+        obErrorLog.ThrowError(__FUNCTION__, "Unknown model type specified. Using the default instead (\"BAS\", ball-and-stick).\n",obWarning);
+        model_type = "BAS";
+      }
+    }
+
+    // Set private class variables for options
+    trans_texture = pConv->IsOption("t") ? true : false;
+    sky = pConv->IsOption("s") ? true : false;
+    checkerboard = pConv->IsOption("c") ? true : false;
+    sphere = pConv->IsOption("f") ? true : false;
 
     //Define some references so we can use the old parameter names
     ostream &ofs = *pConv->GetOutStream();
@@ -683,15 +781,11 @@ namespace OpenBabel
 
     static long num = 0;
     double min_x, max_x, min_y, max_y, min_z, max_z; /* Edges of bounding box */
-    string prefix;
 
-    /* ---- We use the molecule-title as our prefix ---- */
-    if(title != (const char*) NULL)
-      prefix = MakePrefix(title);
-    else if (mol.GetTitle() != (const char *) NULL)
-      prefix = MakePrefix(mol.GetTitle());
-    else
-      prefix = MakePrefix("Unknown");
+    /* ---- We use mol_${num}_ as our prefix ---- */
+    stringstream ss;
+    ss << "mol_" << num;
+    string prefix = ss.str();
 
     /* ---- Check if we have already written a molecule to this file ---- */
     if (num == 0)
@@ -772,6 +866,10 @@ namespace OpenBabel
                         min_x, max_x,
                         min_y, max_y,
                         min_z, max_z);
+
+    
+    /* ---- Insert the molecule ---- */
+    ofs << prefix << endl;
 
     /* ---- Increment the static molecule output-counter ---- */
     num++;
